--- a/yang-client-test.properties
+++ b/yang-client-test.properties
@@ -1,3 +1,3 @@
-message=server-beijing-zone-1(850)
-server.port=9100
+message=server-beijing-zone-1(10000850)
+server.port=9300
 management.security.enabled=false
